--- a/content/classes/NRES222/nine_mile_ws.Rmd
+++ b/content/classes/NRES222/nine_mile_ws.Rmd
@@ -80,7 +80,7 @@ ggplot(data = spparea3,
 ```
 
 
-1) Using the graphs with the raw data, rank the 3 fields (burned in 2015, 2016, or 2017) from most homogeneous (all student data sets similar) to most heterogeneous. You are looking at the spread vertically within a single size of quadrat. Why are some fields more variable (speculate)?
+(@) Using the graphs with the raw data, rank the 3 fields (burned in 2015, 2016, or 2017) from most homogeneous (all student data sets similar) to most heterogeneous. You are looking at the spread vertically within a single size of quadrat. Why are some fields more variable (speculate)?
 
 ----
 
@@ -109,15 +109,15 @@ ggplot(data = spparea4,
 
 ```
 
-2) Compare the average curves for the 3 fields.  Does the species area curve appear to follow a smooth relationship?  Is the shape of the curve the same for all four fields?
+(@) Compare the average curves for the 3 fields.  Does the species area curve appear to follow a smooth relationship?  Is the shape of the curve the same for all four fields?
 
-3) Which of the 3 fields had the highest plant diversity?
+(@) Which of the 3 fields had the highest plant diversity?
 
-4) In which size plots do we generally gain the most new species?
+(@) In which size plots do we generally gain the most new species?
 
-5) Pick the field with the highest diversity. Visually estimate (extrapolate) how many species you would expect to find in a $100 m^2$ plot in that field?
+(@) Pick the field with the highest diversity. Visually estimate (extrapolate) how many species you would expect to find in a $100 m^2$ plot in that field?
 
-6) If you were surveying many grassland types and had to pick a single plot size to use for data collection, what size would you pick and why?
+(@) If you were surveying many grassland types and had to pick a single plot size to use for data collection, what size would you pick and why?
 
 -----
 
@@ -148,11 +148,11 @@ ggplot(data = spparea4,
 
 ```
 
-7) Do the log10 – transformed data appear to follow a linear relationship?  Is the slope of the line similar for all 3 areas?
+(@) Do the log10 – transformed data appear to follow a linear relationship?  Is the slope of the line similar for all 3 areas?
 
-8) Which of the 3 areas had the highest plant diversity?  Do the differences among the grassland types change between small and large plots? (hint: might be easier if you remove `facet_wrap()` and get all three lines on same graph.)
+(@) Which of the 3 areas had the highest plant diversity?  Do the differences among the grassland types change between small and large plots? (hint: might be easier if you remove `facet_wrap()` and get all three lines on same graph.)
 
-9) Pick the grassland type with the highest diversity. Visually estimate (extrapolate) how many species you would expect to find in a 100m2 quadrat using the log10 – transformed data.
+(@) Pick the grassland type with the highest diversity. Visually estimate (extrapolate) how many species you would expect to find in a 100m2 quadrat using the log10 – transformed data.
 
 ----
 
@@ -166,11 +166,11 @@ summary(b2015_lm)
 
 The estimate labeled `(intercept)` is $log(c)$, and the estimate labeled `log(Quadrat_Area)` is $z$. Repeat for the other two groups. Each one needs to be in a new code chunk.
 
-10) What are the equations of your log-transformed relationships for the 3 areas? Type the equations with the numbers to 2 decimal places only, and one equation to a line. 
+(@) What are the equations of your log-transformed relationships for the 3 areas? Type the equations with the numbers to 2 decimal places only, and one equation to a line. 
 
-12) Use the equations to predict how many species each habitat would have at a scale of $1 m^2$? (Remember that $log(1) =0$, so your answer is the value of the intercept.  BUT, you have to transform it from a log scale back to linear, so take 10 raised to the value of the intercept to give the average number of species in a 1m2 plot).
+(@) Use the equations to predict how many species each habitat would have at a scale of $1 m^2$? (Remember that $log(1) =0$, so your answer is the value of the intercept.  BUT, you have to transform it from a log scale back to linear, so take 10 raised to the value of the intercept to give the average number of species in a 1m2 plot).
 
-13) Use the equations to predict how many species each habitat would have at a scale of 100m2 plot? 
+(@) Use the equations to predict how many species each habitat would have at a scale of 100m2 plot? 
 
 You can calculate this using the equations you typed out above.    
 *Example:* let’s say your equation is 
@@ -188,11 +188,11 @@ logS <- 1.0332 + 0.1642 * log10(100)
 10^logS
 ```
 
-11) Do you think these relationships (the straight lines on the logS vs logA graph) would increase smoothly indefinitely?  What would happen if the study area crossed into a different ecosystem type (for example a stand of trees or a corn field)?
+(@) Do you think these relationships (the straight lines on the logS vs logA graph) would increase smoothly indefinitely?  What would happen if the study area crossed into a different ecosystem type (for example a stand of trees or a corn field)?
 
-12) Recall that most studies find $0.25 <= z <=0.35$. Is our data consistent with these expectations?
+(@) Recall that most studies find $0.25 <= z <=0.35$. Is our data consistent with these expectations?
 
-14) Why do you think the various fields we studied differ or do not differ in plant diversity?  How does the time since fire affect diversity?
+(@) Why do you think the various fields we studied differ or do not differ in plant diversity?  How does the time since fire affect diversity?
 
 ## Turn in
 
