--- a/content/classes/NRES803/Week_8/lab_8.Rmd
+++ b/content/classes/NRES803/Week_8/lab_8.Rmd
@@ -82,7 +82,7 @@ ggplot(rr, aes(x=.fitted, y=.resid)) +
 ```
 
 ```{r, echo=FALSE}
-cat("The residuals look OK from both models. There is a bit of structure in the residuals vs. fitted plot for the linear model, but always inside the confidence limits. These models appear pretty much equivalent, with a slight favor to the gam.")
+cat("> The residuals look OK from both models. There is a bit of structure in the residuals vs. fitted plot for the linear model, but always inside the confidence limits. These models appear pretty much equivalent, with a slight favor to the gam.")
 ```
 
 
@@ -95,7 +95,7 @@ anova(sheep.lm2, sheep.gam, test="F")
 ```
 
 ```{r answer02b, echo=FALSE}
-cat("So that's a borderline case if ever there was one! This is actually apparent from the plot above. The straight line falls entirely within the confidence limits of the gam fit. Confidence limits don't overlap everywhere, which is why we're seeing a borderline p value for the anova.")
+cat("> So that's a borderline case if ever there was one! This is actually apparent from the plot above. The straight line falls entirely within the confidence limits of the gam fit. Confidence limits don't overlap everywhere, which is why we're seeing a borderline p value for the anova.")
 ```
 
 
@@ -119,20 +119,20 @@ ogam1 <- gam(ozone~s(rad)+s(temp)+s(wind), data=ozone)
 gam.check(ogam1)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("There is a bit of upward curvature in the qq plot and a hint of heteroscedasticity in the residuals vs. linear predictor plot. Both of those suggest a log transformation of ozone is helpful, especially combined with the observation that ozone is always strictly greater than zero.")
+```{r, echo=FALSE}
+cat("> There is a bit of upward curvature in the qq plot and a hint of heteroscedasticity in the residuals vs. linear predictor plot. Both of those suggest a log transformation of ozone is helpful, especially combined with the observation that ozone is always strictly greater than zero.")
 ```
 
 ```{r, echo=lab.eval}
 summary(ogam1)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("All three smooth terms are significant at p < 0.01, and all have estimated degrees of freedom greater than 2. All three variables are important and non-linear. Now make some prediction plots
+```{r, echo=FALSE}
+cat("> All three smooth terms are significant at p < 0.01, and all have estimated degrees of freedom greater than 2. All three variables are important and non-linear. Now make some prediction plots
 I'll plot ozone vs each of the others, coloring by the second predictor, holding the third predictor at the median.")
 ```
 
-```{r, echo=lab.eval, results='hold'}
+```{r, echo=lab.eval}
 
 ndrad <- with(ozone,
             expand.grid(rad=seq(min(rad), max(rad), length=100),
@@ -170,8 +170,8 @@ ovtemp2 <- ovrad + aes(x=temp, color=wind) + geom_line(aes(group=wind), data=pre
 grid.arrange(ovrad1, ovrad2, ovtemp1, ovtemp2, nrow=2)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("That was alot of typing but some pretty interesting results! The effect of changing radiation is fairly small compared to the effects of wind and temp. Check the top two plots. Look at the range of any one predicted line, and compare that to the range between lines. Similarly, compare the range of a single temperature line to the spread between lines in the bottom left plot (colored by radiation). Also, the model is doing a poor job of predicting the effect of high temperature when wind is high, and low temperature when wind is low.")
+```{r, echo=FALSE}
+cat("> That was alot of typing but some pretty interesting results! The effect of changing radiation is fairly small compared to the effects of wind and temp. Check the top two plots. Look at the range of any one predicted line, and compare that to the range between lines. Similarly, compare the range of a single temperature line to the spread between lines in the bottom left plot (colored by radiation). Also, the model is doing a poor job of predicting the effect of high temperature when wind is high, and low temperature when wind is low.")
 ```
 
 (@) log transform Ozone, and repeat the model with three smooth terms. Compare these two models graphically and numerically, choose which one is better, and explain why.
@@ -181,19 +181,19 @@ ogam2 <- gam(log10(ozone)~s(rad)+s(temp)+s(wind), data=ozone)
 gam.check(ogam2)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("The log transformed response gives better looking residuals. It is almost too strong -- the variance decreases with increasing mean, but not enough to worry about. There is one extreme negative outlier; the lowest observation is poorly predicted.")
+```{r, echo=FALSE}
+cat("> The log transformed response gives better looking residuals. It is almost too strong -- the variance decreases with increasing mean, but not enough to worry about. There is one extreme negative outlier; the lowest observation is poorly predicted.")
 ```
 
 ```{r, echo=lab.eval}
 summary(ogam2)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("This looks good too. I would pick the log transformed model on the basis of improved residuals and the observation that the response distribution is continuous and bounded at 0. Now I'll redo the prediction plots, hopefully I can reuse some of the objects from above! I'm not going to use rad on the x axis, just wind and temp.")
+```{r, echo=FALSE}
+cat("> This looks good too. I would pick the log transformed model on the basis of improved residuals and the observation that the response distribution is continuous and bounded at 0. Now I'll redo the prediction plots, hopefully I can reuse some of the objects from above! I'm not going to use rad on the x axis, just wind and temp.")
 ```
 
-```{r, echo=lab.eval, results='hold'}
+```{r, echo=lab.eval}
 
 ndtemp1 <- with(ozone,
             expand.grid(rad=quantile(rad),
@@ -244,16 +244,16 @@ ovwind2 <- ovrad + aes(x=wind, color=temp) + geom_line(aes(group=temp), data=pre
 grid.arrange(ovtemp1, ovtemp2, ovwind1, ovwind2, nrow=2)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("Conclusions are similar here. The effect of changing radiation is fairly small compared to the effects of wind and temp. Also, the model is still doing a poor job of predicting the effect of high temperature when wind is high, and low temperature when wind is low.")
+```{r, echo=FALSE}
+cat("> Conclusions are similar here. The effect of changing radiation is fairly small compared to the effects of wind and temp. Also, the model is still doing a poor job of predicting the effect of high temperature when wind is high, and low temperature when wind is low.")
 ```
 
 (@) Based on your conclusions from the initial model, fit one or more new
 models with either fewer smooth terms (possibly linear), or additional
 interaction terms. Evaluate and interpret these models graphically and numerically.
 
-```{r, echo=FALSE, results='asis'}
-cat("I can think of two possible explanations for the poor predictions at opposing extremes of temperature and wind. One is that there is an interaction between them. The other is that they are corrlated, and so we never see situations with low temps and low wind, or high temps and high wind. In that case the lines we are plotting just don't make sense in those regions, because those combinations don't occur. We can check the first explanation easily by adding a 2-D spline with wind and temperature.")
+```{r, echo=FALSE}
+cat("> I can think of two possible explanations for the poor predictions at opposing extremes of temperature and wind. One is that there is an interaction between them. The other is that they are corrlated, and so we never see situations with low temps and low wind, or high temps and high wind. In that case the lines we are plotting just don't make sense in those regions, because those combinations don't occur. We can check the first explanation easily by adding a 2-D spline with wind and temperature.")
 ```
 
 ```{r, echo=lab.eval}
@@ -262,8 +262,8 @@ gam.check(ogam3)
 summary(ogam3)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("The residuals on that model look fantastic, and the new 2-D smooth is very strong. Both of the 1-D smooths on temp and wind are now not-signficant, suggesting that their effects have been absorbed into the 2-D smooth. So I'll pull those out, refit, and look at the predictions.")
+```{r, echo=FALSE}
+cat("> The residuals on that model look fantastic, and the new 2-D smooth is very strong. Both of the 1-D smooths on temp and wind are now not-signficant, suggesting that their effects have been absorbed into the 2-D smooth. So I'll pull those out, refit, and look at the predictions.")
 ```
 
 ```{r, echo=lab.eval}
@@ -286,8 +286,8 @@ ovrad + aes(x=wind, color=temp) + geom_line(aes(group=temp), data=predvwind2)
 
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("Those are some crazy looking plots. I think the problem is the second case -- temp and wind are correlated, and the predictions I am making ignore that, and essentially cut straight across the surface. Generating predictions that respect that relationship is a bit tricky. I'm going to try, but note that this is in the \"beyond the scope of the course\" category.\n\n What I want is a new data.frame that has a range of values for wind that make sense for a particular temperature. If I was only interested in predicting the mean I could just use a linear model. But I want a range of values at particular quantiles. What I need is a quantile regression - how does the (say) 75th percentile of wind change as temperature changes. Enter package quantreg")
+```{r, echo=FALSE}
+cat("> Those are some crazy looking plots. I think the problem is the second case -- temp and wind are correlated, and the predictions I am making ignore that, and essentially cut straight across the surface. Generating predictions that respect that relationship is a bit tricky. I'm going to try, but note that this is in the \"beyond the scope of the course\" category.\n\n What I want is a new data.frame that has a range of values for wind that make sense for a particular temperature. If I was only interested in predicting the mean I could just use a linear model. But I want a range of values at particular quantiles. What I need is a quantile regression - how does the (say) 75th percentile of wind change as temperature changes. Enter package quantreg")
 ```
 
 ```{r, echo=lab.eval}
@@ -304,7 +304,7 @@ ovrad + aes(x=temp, color=wind) +
   geom_line(aes(group=.tau), data=predvtemp3)
 ```
 
-```{r, echo=FALSE, results='asis'}
+```{r, echo=FALSE}
 cat("That's much better! Still, the prediction for the 90th percentile of wind is well outside the data. Let's see if the 2-D model does any better.")
 ```
 
@@ -316,8 +316,8 @@ ovrad + aes(x=temp, color=wind) +
   geom_line(aes(group=.tau), data=predvtemp3, size=1.5)
 ```
 
-```{r, echo=FALSE, results='asis'}
-cat("At the top end that's better, and the lines are a little less crazy. Hard to believe that's not overfitted though. I think this 2-D smooth is seriously stretching the value of the data. You know what is crazy cool? The lines are colored according to the value of wind for that temperature! ")
+```{r, echo=FALSE}
+cat("> At the top end that's better, and the lines are a little less crazy. Hard to believe that's not overfitted though. I think this 2-D smooth is seriously stretching the value of the data. You know what is crazy cool? The lines are colored according to the value of wind for that temperature! ")
 ```
 
 [^1]: This is an excellent book if you are looking for a second reference book on statistics for ecology in R. The code and data for the book are available [here](http://www.bio.ic.ac.uk/research/mjcraw/therbook/).
