--- a/content/classes/NRES803/Week_12/Lab_12.Rmd
+++ b/content/classes/NRES803/Week_12/Lab_12.Rmd
@@ -242,20 +242,12 @@ ggplot(nd, aes(x=csLength, y=pp, col=fSex)) +
 
 ```
 
-I like this one with `facet_wrap()` better than the one from last week. OK, now we want to do the bootstrap. But fitting this model already is slow, so doing it 1000 times is even slower! Bootstrapping is one of the things that benefits from parallel computing very easily. The bit of code below sets up a "cluster" on my computer and splits the computation up 4 ways. 4 times faster. Most modern CPU's have multiple cores that can run independently. In normal operation R uses just one core. My office computer has **8** cores, so could speed up this computation by a factor of 8! Although it doesn't appear to be working with the following code, not sure why.
+I like this one with `facet_wrap()` better than the one from last week. OK, now we want to do the bootstrap. But fitting this model already is slow, so doing it 1000 times is even slower! Bootstrapping is one of the things that benefits from parallel computing very easily. There are some options to `bootMer()` that splits the computation up 4 ways. 4 times faster. Most modern CPU's have multiple cores that can run independently. In normal operation R uses just one core. My office windows computer has **8** cores, so could speed up this computation by a factor of 8! This seems a bit fussy -- use at own risk!
 
 ```{r bigBoot2, eval=FALSE}
 # Don't run this code!
-# this package sets up the cluster
-library(snow)
-cl <- makeCluster(4, type = "SOCK")
-# now we pass the cluster object to bootMer
-# note that I can use the same myFunc!
-bigBoot2 <- bootMer(M0, myFunc, nsim=1000,
-                    parallel = "snow",
-                    cl = cl)
-stopCluster(cl) ## hmmm, makeCluster doesn't appear to be working
 # takes a loooong time ... 
+bigBoot2 <- bootMer(M0, myFunc, nsim = 1000, parallel = "multicore", ncpus=4)
 save(bigBoot2, file="data/bigBoot2.RData")
 ```
 
