--- a/content/classes/NRES803/Week_12/Lab_12.Rmd
+++ b/content/classes/NRES803/Week_12/Lab_12.Rmd
@@ -242,7 +242,7 @@ ggplot(nd, aes(x=csLength, y=pp, col=fSex)) +
 
 ```
 
-I like this one with `facet_wrap()` better than the one from last week. OK, now we want to do the bootstrap. But fitting this model already is slow, so doing it 1000 times is even slower! Bootstrapping is one of the things that benefits from parallel computing very easily. There are some options to `bootMer()` that splits the computation up 4 ways. 4 times faster. Most modern CPU's have multiple cores that can run independently. In normal operation R uses just one core. My office windows computer has **8** cores, so could speed up this computation by a factor of 8! This seems a bit fussy -- use at own risk!
+I like this one with `facet_wrap()` better than the one from last week. OK, now we want to do the bootstrap. But fitting this model already is slow, so doing it 1000 times is even slower! Bootstrapping is one of the things that benefits from parallel computing very easily. There are some options to `bootMer()` that splits the computation up 4 ways. 4 times faster. Most modern CPU's have multiple cores that can run independently. In normal operation R uses just one core. My office windows computer has **8** cores, so could speed up this computation by a factor of 8! This seems a bit fussy -- use at own risk! You can download a binary file with my bigBoot2 object in it [here]("data/bigBoot2.RData").
 
 ```{r bigBoot2, eval=FALSE}
 # Don't run this code!
