Week 13 lab, fix ordering

--- a/content/classes/NRES803/Week_11/lab_11.Rmd
+++ b/content/classes/NRES803/Week_11/lab_11.Rmd
@@ -5,6 +5,7 @@ date: "`r Sys.Date()`"
 output: 
   html_document:
     fig_caption: TRUE
+weight: 803111
 ---
 ```{r setup, echo=FALSE, results='hide'}
 lab.eval=FALSE
