--- a/content/classes/NRES803/Week_12/Lab_12.Rmd
+++ b/content/classes/NRES803/Week_12/Lab_12.Rmd
@@ -5,6 +5,8 @@ date: "`r Sys.Date()`"
 output: 
   html_document:
     fig_caption: true
+    
+weight: 803121
 ---
 
 ```{r setup, echo=FALSE, results='hide'}
